--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^16.18.38",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "html-react-parser": "^5.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router": "^6.20.0",
