--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "scss": "sass --whatch scss -o css"
+        "scss": "sass --watch scss -o css"
     },
     "eslintConfig": {
         "extends": [
